[gd_scene load_steps=5 format=3 uid="uid://cn0py5avo3n7c"]

[ext_resource type="Script" path="res://fight_scene.gd" id="1_o12qd"]
[ext_resource type="PackedScene" uid="uid://br2bo3gj2nw41" path="res://Enemy.tscn" id="2_clnbp"]
[ext_resource type="Texture2D" uid="uid://ccy4tqpadf6sf" path="res://player/5EicSM.png" id="2_qmimk"]
[ext_resource type="PackedScene" uid="uid://btx1teb645a1q" path="res://drone.tscn" id="3_vwsxs"]

[node name="FightScene" type="Node2D"]
script = ExtResource("1_o12qd")
enemy_scene = ExtResource("2_clnbp")
drone_scene = ExtResource("3_vwsxs")
drone_interval = 3.0

[node name="PlayerShip" type="Sprite2D" parent="."]
position = Vector2(577, 277)
scale = Vector2(0.153558, 0.131769)
texture = ExtResource("2_qmimk")

[node name="DroneContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 424.0
offset_top = 562.0
offset_right = 696.0
offset_bottom = 624.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
